[workspace]
members = [
    "atlas",
    "forma",
    "light",

    #

    "crates/world",
]
resolver = "3"

[workspace.dependencies]
world = { path = "crates/world" }

bytemuck = "1.4"
egui = "0.33.2"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
glam = "0.30.9"
pollster = "0.4.0"
rusqlite = "0.37.0"
thiserror = "2.0.17"
wgpu = "27.0.1"
winit = "0.30.12"
zstd = "0.13.3"
